<resources>
    <string name="app_name">NewsApp</string>
    <string name="cd_about_image">mugshot</string>
    <string name="key_info">Key info</string>
    <string name="description">Description</string>
    <string name="edittext_hint">Enter a message</string>
    <string name="button_send_message">Send message</string>
    <string name="error_no_app">There is no suitable app for this action</string>
    <string name="cd_github">github</string>
    <string name="cd_telegram">telegram</string>
    <string name="menu_about">About</string>
    <string name="mailto_address">mailto:test@email.com</string>
    <string name="mail_subject">NewsApp Feedback</string>
    <string name="github_link">https://github.com/username</string>
    <string name="telegram_link">https://t.me/username</string>
    <string name="cd_news_picture">news_picture</string>
</resources>
